styles/style.css
/* ... */
#rulerBox2{
	display:none;
	position: absolute;
	top: 0;
	width: 0;
	background-color: transparent;
	border-bottom: 1px dotted white;
	z-index: 102;
}
#rulerBox2 p{
	position: absolute;
	
}
#rulerBox3{
	display:none;
	position: absolute;
	top: 0;
	width: 0;
	background-color: transparent;
	border-right: 1px dotted white;
	z-index: 102;
}
.dataLog{
	position: absolute;
	
	width: 420px;
	height: 200px;
	background-color: rgb(128,128,128);
	color: #222;
	overflow: hidden;
		z-index: 100;
	border: 1px solid;
	padding: 0px;
		border-color: #333;

}
.dataLog>h2{
	color:inherit !important;
}
.logContainer{
	height: 100%;
	overflow: auto;	
	border-top: 1px solid;

}
.logContainer table{
	width: 100%;	
	table-layout: fixed;
}

.logContainer th{
	margin: auto;	
	border-bottom: 1px solid;
}
.logContainer th:nth-child(2){
	border-left: 1px solid;
}
.logContainer th:nth-child(1){
	border-right: 1px solid;
	overflow: hidden;
	width: 160px;
}
.logContainer tr{
	text-align: center;	
	
}
.logContainer tr td{
	border-bottom: 1px solid;	
	padding-bottom: 3px;
}
.logContainer tr td:nth-child(1){
	border-right: 1px solid;
	width: 160px;
}
.logContainer tr td:nth-child(2){
	border-left: 1px solid;	
	width: auto;
}
.logEntry{
	color:inherit;
	font-size: inherit;
	margin: 0 2px;
	padding: 0 1px;
	border: 1px #333 solid;
	background-color: white;
	min-width: 200px;
	max-width: 80%;
}
#cropDialog{
	display: none;
	width: auto;
	height: auto;
	position: fixed;
	border-radius: 5px 5px 0px 0px;
	bottom: 18px;
	left: 45%;
	background-color: rgba(200, 200, 200, 0.8);
	z-index: 1001;
}
#preload{
	display:none;
}
#ws_image_preload{
	display: none;
}
.top-container{
	clear: both;
	height: 100vh;
	width: 100vw;
	background-color: transparent;
	z-index: 0;
	overflow: hidden;
}
.top-container h2{
	color: #DEDEDE;
	text-align: center;
	font-size: 18px;
	margin: 4px;
	
}
.left{
	float: left;
	width: 50%;
	height: 450px;
}
.info-panel{
	width: 100%;
	height: 410px;
	clear: both;
}

/* Styling for left-hand control panel */
.controlsOverlay{
	display: none;
	position:absolute;
	width:250px;
	height:98vh;
	padding-left: 10px;
	padding-right: 10px;
	background-color: rgba(0,0,0,0.7);
	z-index: 103;
}
.controls{
	width: 250px;
	height: 98vh;
	background-color:rgba(0, 0, 0,.5);
	padding-left: 10px;
	padding-right: 10px;
	border: black 1px solid;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 102;
	box-shadow: 0px 0px 4px #222;
	text-align: center;
	display: none;
}
.controlsTitle{
	overflow: hidden;	
}
.controls h2{
	font-size: 26px;
	margin: 1px;
	padding: 0px;
	text-align: center;
	color: #999 !important;
}
/*styling for rows of buttons under file-tree */
.controlRow{
	display: inline-block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10px;
	width: 100%;
	clear:both;
	height: auto;	
}
#refreshControlRow{
	width: 100%;
	clear:both;
	height: auto;
	margin-top: 0;
}
#refreshTree{
	width: 100%;
}
.editWindowRow .fa-question{
	color: #999;	
	float: left;
	margin-left: -10px;
	font-size: 12px;
	cursor: help;
}
.editWindowRow .fa-question:hover{
	color: white;
	text-shadow: 0px 0px 5px white;
}
.controls input{
	vertical-align: middle;
	display: inline-block;
}
.controls select{
	vertical-align: middle;
	display: inline-block;	
}
.controls button{
	vertical-align: middle;
	display: inline-block;
	width: 100%;
	height: auto;
	color: #333;
	overflow: hidden;
}
.controls button span{
	float: left;
	margin-left: 10px;
}
.controls button i{
	float: left;
	margin-left: 5px;
}
.controls p{
	vertical-align: middle;
	display: inline-block;
	height: 20px;
	width: 100px;
}
.controls hr{
	border: 0; 
	height: 1px; 
	background-image: linear-gradient(to right, rgba(153, 153, 153, 0), rgba(153, 153, 153, 0.75), rgba(153, 153, 153, 0));
}
.verticalAlign{
	height: 50px;
	vertical-align: middle;
	display: inline-block;
}
.right{
	float: right;
	width: 49%;
	height: 450px;
}
#content{
	display: block;
	height: auto;
}
div.logo_container{
	height: 60px;
	width: 60px;
	background-image: url('../images/aprsworld_logo.175.jpg');
    background-repeat: no-repeat;
	background-size: contain;
	float: left;
}

#imageHide{
	position: absolute;
	top:0;
	right:10;
	background-color: rgba(0,0,0,.5);
	height: auto;
	width: auto;
	z-index: 2;
	padding: 5px;
	border-radius: .2em;
	color: white;
	display: none;
}
#saveState{
	margin-top: 5px;
	margin-bottom: 10px;
	width: 80%;
}
#saveState span{
	display: inline-block;
	float: left;
	margin-left: 5px;
}
#saveState i{
	display: inline-block;
	float: left;
	margin-left: 5px;
}
#saveAs{
	width: 100%;
	height: 30px;
}
.fontContainer, #limitSelector{
	width: 80px;	
	height:36px;
	float: left;
}
#fontSizePlus{
	float: right;
	padding: 0;
	height: 15px;
	width: 30px;
	font-size: 12px;
}
#fontSize{
	float: left;
	width: 30px;
	background: #AAA;
	border-color: #333;
	border: 0;
	color: #333;
	height: 28px;
	text-align: center;
}
#fontSizeMinus{
	float: right;
	padding: 0;	
	height: 15px;
	width: 30px;
	font-size: 12px;
}
.container{
	margin-left: auto;
	margin-right: auto;
}
.th{
	float: left;	
}
.td {
	float: left;
}
.container .tr td:first-child{
	display: none;	
}
.container .myTableID{
	width: 10%;
	display: none;
	float: left;
	height: 50px;
}
.container .myTableID span{
	color: white;
}
.container .myTableTitle{
	width: 100%;
	float: left;
	clear: both;
	height:auto;
	font-size: inherit;
	font-weight: bold;
	color: inherit !important;
	background-color: rgba(0,0,0,.35);
	border-radius: .25em;
}
.container .myTableTitle p{
	margin: 0;
	padding: 0;
}

/*styling for user created blocks of text*/
.textBlockContainer{
	position: absolute;
	top: 50;
	left: 300;
	width: 300px;
	height: 400px;
	/*padding: 10px;*/
	background-color: grey;
	color: #333;
	z-index: 100;
	font-size: 14px;
}
.textBlockContainer p{
	color: inherit;
	font-size: inherit;
	margin: 10px;
	padding: 0;
}
/* ... */

